refactor - change Java version